# musicpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md  resource.rc  vcpkg.json
.github/workflows/: release.yml
include/: amscraper.h  consoleutils.h  constants.h  credhelper.h  discordrp.h  globals.h  imgur.h  lfm.h  m3u8.h  m3u8_internals.h  mediaPlayer.h  musicpp.h  resource.h  spotify.h  stringutils.h  timeutils.h  utils.h
include/discord/: presence.hpp  refresh.hpp  rp.hpp
include/log/: log.hpp  logGlobal.hpp
include/metadata/: cache.hpp  cache_codec.hpp  enricher.hpp  matching.hpp  scrobbler.hpp
include/metadata/http/: curlGlobal.hpp  curlWrapper.hpp
include/metadata/sources/: lastfm.hpp  scraper.hpp  source.hpp
include/metadata/uploaders/: imgur.hpp  uploader.hpp
include/orchestrator/: orchestrator.hpp  scrobble_driver.hpp  worker.hpp
include/players/: amwin.hpp  poller.hpp
include/security/: credentials.hpp
include/system/: amwin.hpp  notifications.hpp  paths.hpp  poller.hpp  winrt.hpp
include/types/: results.hpp  track.hpp
include/ui/: tray.hpp
installer/: installer.iss
resources/: resource.h
scripts/: reliability.py  watcher.ps1
src/: amscraper.cpp  consoleutils.cpp  credhelper.cpp  discordpp_impl.cpp  discordrp.cpp  imgur.cpp  lfm.cpp  m3u8.cpp  m3u8_internals.cpp  main.cpp  mediaPlayer.cpp  musicpp.cpp  resource.rc  spotify.cpp  stringutils.cpp  timeutils.cpp  tray.cpp  utils.cpp
src/discord/: discordpp_impl.cpp  rp.cpp
src/log/: log.cpp
src/metadata/: cache.cpp  cache_codec.cpp  enricher.cpp  matching.cpp
src/metadata/http/: curlWrapper.cpp
src/metadata/sources/: lastfm.cpp  scraper.cpp
src/metadata/uploaders/: imgur.cpp
src/orchestrator/: orchestrator.cpp  scrobble_driver.cpp  worker.cpp
src/players/: amwin.cpp
src/security/: credentials.cpp
src/system/: amwin.cpp  notifications.cpp  paths.cpp
src/types/: results.cpp  track.cpp
src/ui/: tray.cpp
tests/metadata/: cache_codec_test.cpp  cache_test.cpp  enricher_test.cpp  matching_test.cpp
tests/orchestrator/: orchestrator_test.cpp  scrobble_driver_test.cpp  worker_test.cpp
tests/types/: track_test.cpp
